add folder images and photo files to folder images; add div and class carrousel in the HTML

--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
       </div>
     </nav>
 
+    <div class="carousel-container">
+      <div class="carousel">
+        <div class="slider">
+            <div class="slide-content">
+                <h1 class="movie-title">loki</h1>
+                <p class="movie-des">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit saepe eius ratione nostrum mollitia explicabo quae nam pariatur. Sint, odit?</p>
+            </div>
+            <img src="images/slider 1.PNG" alt="">
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
