linked styles.css and add scripts to files data.js, app.js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Disney+ Clone</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
@@ -29,10 +30,13 @@
                 <h1 class="movie-title">loki</h1>
                 <p class="movie-des">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit saepe eius ratione nostrum mollitia explicabo quae nam pariatur. Sint, odit?</p>
             </div>
-            <img src="images/slider 1.PNG" alt="">
+            <img src="images/slider 1.PNG" alt="slider">
         </div>
       </div>
     </div>
+
+    <script src="data.js" ></script>
+    <script src="app.js" ></script>
 
   </body>
 </html>
