add description for serie Loki and Dom for function createSlide

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="slider">
             <div class="slide-content">
                 <h1 class="movie-title">loki</h1>
-                <p class="movie-des">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit saepe eius ratione nostrum mollitia explicabo quae nam pariatur. Sint, odit?</p>
+                <p class="movie-des">Após roubar o tesserato dos Vingadores, Loki (Tom Hiddleston) usa a Joia do Espaço para pular no tempo e, assim, chegar a Midgard. Mas, ao longo de sua jornada, ele acaba interferindo em momentos importantes da história da humanidade, o que pode colocar em risco todo o universo.</p>
             </div>
             <img src="images/slider 1.PNG" alt="slider">
         </div>
