add class video-card-container in the html and selector to class video-card-container

--- a/index.html
+++ b/index.html
@@ -25,13 +25,36 @@
 
     <div class="carousel-container">
       <div class="carousel">
-        <div class="slider">
-            <div class="slide-content">
+      <!--  <div class="slider">
+              <div class="slide-content">
                 <h1 class="movie-title">loki</h1>
                 <p class="movie-des">Após roubar o tesserato dos Vingadores, Loki (Tom Hiddleston) usa a Joia do Espaço para pular no tempo e, assim, chegar a Midgard. Mas, ao longo de sua jornada, ele acaba interferindo em momentos importantes da história da humanidade, o que pode colocar em risco todo o universo.</p>
-            </div>
+              </div>
             <img src="images/slider 1.PNG" alt="slider">
-        </div>
+        </div>  -->
+      </div>
+    </div>
+
+    <div class="video-card-container">
+      <div class="video-card">
+        <img src="images/disney.PNG" class="video-card-image" alt="">
+        <video src="videos/disney.mp4" mute loop class="card-video"></video>
+      </div>
+      <div class="video-card">
+        <img src="images/pixar.PNG" class="video-card-image" alt="">
+        <video src="videos/pixar.mp4" mute loop class="card-video"></video>
+      </div>
+      <div class="video-card">
+        <img src="images/marvel.PNG" class="video-card-image" alt="">
+        <video src="videos/marvel.mp4" mute loop class="card-video"></video>
+      </div>
+      <div class="video-card">
+        <img src="images/star-wars.PNG" class="video-card-image" alt="">
+        <video src="videos/star-war.mp4" mute loop class="card-video"></video>
+      </div>
+      <div class="video-card">
+        <img src="images/geographic.PNG" class="video-card-image" alt="">
+        <video src="videos/geographic.mp4" mute loop class="card-video"></video>
       </div>
     </div>
 
