add class title and class cards to index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
       </div>
     </div>
 
+    <h1 class="title">recommended for you</h1>
+    <div class="movies-list">
+        <button class="pre-btn"><img src="images/pre.png" alt=""></button>
+        <button class="nxt-btn"><img src="images/nxt.png" alt=""></button>
+        <div class="card-container">
+            <div class="card">
+                <img src="images/poster 1.png" class="card-img" alt="">
+                <div class="card-body">
+                    <h2 class="name">movie name</h2>
+                    <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
+                    <button class="watchlist-btn">add to watchlist</button>
+                </div>
+            </div>
+            ...20+ more cards
+        </div>
+     </div>
+.. repeat this whole block 3-4 times with different card content
+
     <script src="data.js" ></script>
     <script src="app.js" ></script>
 
